# Anvil

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/commands/: command_registry.h  handlers.h
include/logging/: logger.h
include/parser/: dispatcher.h
src/: main.c
src/commands/: command_registry.c  handlers.c
src/logging/: logger.c
src/parser/: dispatcher.c
src/templater/: handlers.c
